Avoid text flickering in display query window (#1853)

--- a/contribs/gmf/less/displayquerywindow.less
+++ b/contribs/gmf/less/displayquerywindow.less
@@ -62,7 +62,8 @@
   }
   .gmf-displayquerywindow-next {
     .gmf-displayquerywindow-slide-animation {
-      &.ng-enter {
+      &.ng-enter,
+      &.ng-enter-prepare {
         left: 100%;
       }
       &.ng-enter-active, &.ng-leave {
@@ -75,7 +76,8 @@
   }
   .gmf-displayquerywindow-previous {
     .gmf-displayquerywindow-slide-animation {
-      &.ng-enter {
+      &.ng-enter,
+      &.ng-enter-prepare {
         left: -100%;
       }
       &.ng-enter-active, &.ng-leave {
